fix: change replay actions layout from flex to grid for improved alignment

--- a/src/components/ui/ReplayCard/ReplayCard.scss
+++ b/src/components/ui/ReplayCard/ReplayCard.scss
@@ -59,17 +59,18 @@ $list-background-2-dark: rgba(169, 169, 169, 0.35);
 	}
 
 	>div.replay-actions {
-		display: flex;
+		display: grid;
+		grid-template-columns: auto 16px;
 		gap: 6px;
 		margin-left: auto;
 		opacity: 0.75;
-		width: 52px;
     	height: 16px;
 
 		.replay-state {
 			letter-spacing: 1px;
 			text-transform: uppercase;
 			font-size: 10px;
+			grid-column: 1;
 		}
 	}
 }
